--- a/projects/p4_flightsurety/package.json
+++ b/projects/p4_flightsurety/package.json
@@ -9,7 +9,7 @@
   "license": "MIT",
   "scripts": {
     "test": "truffle test ./test/flightSurety.js",
-    "dapp": "webpack serve --mode development --config webpack.config.dapp.js",
+    "dapp": "webpack-dev-server --mode development --config webpack.config.dapp.js",
     "dapp:prod": "webpack --mode production  --config webpack.config.dapp.js",
     "server": "rm -rf ./build/server && webpack --config webpack.config.server.js"
   },
@@ -20,7 +20,6 @@
     "@babel/plugin-proposal-class-properties": "^7.0.0-beta.46",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.46",
     "@babel/preset-env": "^7.0.0-beta.46",
-    "@webpack-cli/serve": "^1.5.2",
     "babel-core": "6.26.3",
     "babel-loader": "8.0.5",
     "babel-polyfill": "6.26.0",
@@ -36,15 +35,13 @@
     "start-server-webpack-plugin": "2.2.5",
     "style-loader": "^0.23.1",
     "superstatic": "6.0.3",
-    "truffle-hdwallet-provider": "1.0.17",
-    "web3": "2.0.0-alpha.1",
-    "webpack": "^4.20.2",
-    "webpack-cli": "^4.3.0",
-    "webpack-dev-server": "^4.0.0",
+    "truffle": "5.0.2",
+    "truffle-hdwallet-provider": "1.0.2",
+    "web3": "1.0.0-beta.37",
+    "webpack": "^4.35.2",
+    "webpack-cli": "^3.3.6",
+    "webpack-dev-server": "^3.7.2",
     "webpack-node-externals": "1.7.2"
   },
-  "dependencies": {
-    "node-gyp": "^8.2.0",
-    "rebuild": "^0.1.2"
-  }
+  "dependencies": {}
 }
